tests/ui/const-generics/mgca/trait-assoc-fn-as-const-arg.stderr
error: function items cannot be used as const arguments
  --> $DIR/trait-assoc-fn-as-const-arg.rs:6:26
   |
LL |     fn x(&self) -> [i32; Bar::x];
   |                          ^^^^^^

error: aborting due to 1 previous error

